--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <a href="/"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="#">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
