--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <UL>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+       </UL>
     </header>
     <main>
       <section>
@@ -78,7 +80,7 @@
           </li>
           <li>
             <img
-              src="./img1/Olga.jpg"
+              src="./img1/Olga.jpg" 
               alt="Ольга Рєпіна"
               width="270"
               height="260"
